--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Когнитивные искажения Yaroslavskiba</title>
 
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+	<header class="header">
 
+	</header>
+	<main class="main">
+
+	</main>
+	<footer class="footer">
+
+	</footer>
 </body>
 </html>
