--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<header class="header">
+	<header class="header section">
 
 	</header>
-	<main class="main">
+	<main class="main section">
 
 	</main>
-	<footer class="footer">
+	<footer class="footer section">
 
 	</footer>
 </body>
