--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,37 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<header class="header section">
-
+	<header class="header color-light">
+		<section class="header__section">
+			<div class="header__title header-title">
+				<h1 class="header-title__title"><span class="orange">Когнитивные <br>искажения</span><br>в программировании</h1>
+				<img src="./images/main.png" alt="main image" class="header-title__image">
+			</div>
+			<div class="header__text">
+				<div class="left">
+					<p>
+						Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+					</p>
+				</div>
+				<div class="right">
+					<p>
+						Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию. <br><br>
+					Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+					</p>
+					<a href="#" class="btn">подробнее</a>
+				</div>
+			</div>
+		</section>
 	</header>
-	<main class="main section">
+	<main class="main">
+		<section>
 
+		</section>
 	</main>
-	<footer class="footer section">
+	<footer class="footer">
+		<section>
 
+		</section>
 	</footer>
 </body>
 </html>
