--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header class="header color-light">
-		<section class="header__section">
+		<div class="header__section section">
 			<div class="header__title header-title">
 				<h1 class="header-title__title"><span class="orange">Когнитивные <br>искажения</span><br>в программировании</h1>
 				<img src="./images/main.png" alt="main image" class="header-title__image">
@@ -29,15 +29,25 @@
 					<a href="#" class="btn">подробнее</a>
 				</div>
 			</div>
-		</section>
+		</div>
 	</header>
-	<main class="main">
-		<section>
 
+	<main class="main">
+    <section>
+			<div class="section media-content">
+					<div class="media-content__head">
+							<h2 class="media-content__title">Что же это такое, <br><span class="orange">когнитивные искажения?</span></h2>
+							<p class="media-content__text text">Что такое когнитивные искажения. Petrovna Channel</p>
+					</div>
+					<div class="media-content__main">
+							<iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+					</div>
+			</div>
 		</section>
 	</main>
+
 	<footer class="footer">
-		<section>
+		<section class="">
 
 		</section>
 	</footer>
