--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,17 @@
 					</div>
 			</div>
 		</section>
+
+		<section>
+			<div class="section navigation" id="navigation">
+				
+			</div>
+		</section>
+
 	</main>
 
 	<footer class="footer">
-		<section class="">
 
-		</section>
 	</footer>
 </body>
 </html>
