--- a/src/index.html
+++ b/src/index.html
@@ -50,68 +50,68 @@
 				<div class="navigation__block-link">
 
 					<div class="navigation__title navigation-item">
-						<p><span class="orange">5 когнитивных искажений</span><br>о существовании которых стоит помнить</p>
+						<p><span class="orange-hover">5 когнитивных искажений</span><br>о существовании которых стоит помнить</p>
 					</div>
 
-					<div class="navigation__item navigation-item card">
+					<a href="#" class="navigation__item navigation-item card">
 						<div class="navigation-item__num">
 							<span class="number">1</span>
 						</div>
 						<div class="navigation-item__info info">
-							<h3 class="orange">Эффект ИКЕА</h3>
+							<h3 class="orange-hover">Эффект ИКЕА</h3>
 							<p class="info-text">
 								Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
 							</p>
 						</div>
-					</div>
+					</a>
 
-					<div class="navigation__item navigation-item card">
+					<a href="#" class="navigation__item navigation-item card">
 						<div class="navigation-item__num">
 							<span class="number">2</span>
 						</div>
 						<div class="navigation-item__info info">
-							<h3 class="orange">Преждевременная оптимизация</h3>
+							<h3 class="orange-hover">Преждевременная оптимизация</h3>
 							<p class="info-text">
 								Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
 							</p>
 						</div>
-					</div>
+					</a>
 
-					<div class="navigation__item navigation-item card">
+					<a href="#" class="navigation__item navigation-item card">
 						<div class="navigation-item__num">
 							<span class="number">3</span>
 						</div>
 						<div class="navigation-item__info info">
-							<h3 class="orange">Искажение новизны</h3>
+							<h3 class="orange-hover">Искажение новизны</h3>
 							<p class="info-text">
 								Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
 							</p>
 						</div>
-					</div>
+					</a>
 
-					<div class="navigation__item navigation-item card">
+					<a href="#" class="navigation__item navigation-item card">
 						<div class="navigation-item__num">
 							<span class="number">4</span>
 						</div>
 						<div class="navigation-item__info info">
-							<h3 class="orange">Гиперболическое обесценивание</h3>
+							<h3 class="orange-hover">Гиперболическое обесценивание</h3>
 							<p class="info-text">
 								Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.
 							</p>
 						</div>
-					</div>
+					</a>
 
-					<div class="navigation__item navigation-item card">
+					<a href="#" class="navigation__item navigation-item card">
 						<div class="navigation-item__num">
 							<span class="number">5</span>
 						</div>
 						<div class="navigation-item__info info">
-							<h3 class="orange">Ошибка планирования</h3>
+							<h3 class="orange-hover">Ошибка планирования</h3>
 							<p class="info-text">
 								Неправильно рассчитывать время необходимое для завершения задачи.
 							</p>
 						</div>
-					</div>
+					</a>
 
 				</div>
 			</div>
