--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
 	</header>
 
 	<main class="main">
-    <section class="section">
-			<div class="media-content">
+    <section class="media">
+			<div class="media-content section">
 					<div class="media-content__head">
 							<h2 class="media-content__title">Что же это такое, <br><span class="orange">когнитивные искажения?</span></h2>
 							<p class="media-content__text text">Что такое когнитивные искажения. Petrovna Channel</p>
