--- a/src/index.html
+++ b/src/index.html
@@ -9,118 +9,133 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<header class="header color-light">
-		<div class="header__section section">
-			<div class="header__title header-title">
-				<h1 class="header-title__title"><span class="orange">Когнитивные <br>искажения</span><br>в программировании</h1>
-				<img src="./images/main.png" alt="main image" class="header-title__image">
-			</div>
-			<div class="header__text">
-				<div class="left">
-					<p>
-						Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
-					</p>
-				</div>
-				<div class="right">
-					<p>
-						Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию. <br><br>
-					Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
-					</p>
-					<a href="#" class="btn">подробнее</a>
-				</div>
-			</div>
-		</div>
-	</header>
+  <header class="header color-light">
+    <div class="header-section section">
+      <div class="header-title">
+        <h1 class="header-title-title"><span class="orange">Когнитивные <br>искажения</span><br>в программировании</h1>
+        <img src="./images/main.png" alt="main image" class="header-title-image">
+      </div>
+      <div class="header-text">
+        <div class="left">
+          <p>
+            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+          </p>
+        </div>
+        <div class="right">
+          <p>
+            Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию. <br><br>
+            Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+          </p>
+          <a href="#" class="btn">подробнее</a>
+        </div>
+      </div>
+    </div>
+  </header>
 
-	<main class="main">
+  <main class="main">
     <section class="media">
-			<div class="media-content section">
-					<div class="media-content__head">
-							<h2 class="media-content__title">Что же это такое, <br><span class="orange">когнитивные искажения?</span></h2>
-							<p class="media-content__text text">Что такое когнитивные искажения. Petrovna Channel</p>
-					</div>
-					<div class="media-content__main">
-							<iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
-					</div>
-			</div>
-		</section>
+      <div class="media-content section">
+        <div class="media-content-head">
+          <h2 class="media-content-title">Что же это такое, <br><span class="orange">когнитивные искажения?</span></h2>
+          <p class="media-content-text text">Что такое когнитивные искажения. Petrovna Channel</p>
+        </div>
+        <div class="media-content-main">
+          <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </section>
 
-		<section class="nav">
-			<div id="navigation" class="section">
-				<div class="navigation__block-link">
+    <section class="nav">
+      <div id="navigation" class="section">
+        <div class="navigation-block-link">
 
-					<div class="navigation__title navigation-item">
-						<p><span class="orange-hover">5 когнитивных искажений</span><br>о существовании которых стоит помнить</p>
-					</div>
+          <div class="navigation-title navigation-item">
+            <p><span class="orange-hover">5 когнитивных искажений</span><br>о существовании которых стоит помнить</p>
+          </div>
 
-					<a href="#" class="navigation__item navigation-item card">
-						<div class="navigation-item__num">
-							<span class="number">1</span>
-						</div>
-						<div class="navigation-item__info info">
-							<h3 class="orange-hover">Эффект ИКЕА</h3>
-							<p class="info-text">
-								Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
-							</p>
-						</div>
-					</a>
+          <a href="#" class="navigation-item card">
+            <div class="navigation-item-num">
+              <span class="number">1</span>
+            </div>
+            <div class="navigation-item-info info">
+              <h3 class="orange-hover">Эффект ИКЕА</h3>
+              <p class="info-text">
+                Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
+              </p>
+            </div>
+          </a>
 
-					<a href="#" class="navigation__item navigation-item card">
-						<div class="navigation-item__num">
-							<span class="number">2</span>
-						</div>
-						<div class="navigation-item__info info">
-							<h3 class="orange-hover">Преждевременная оптимизация</h3>
-							<p class="info-text">
-								Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
-							</p>
-						</div>
-					</a>
+          <a href="#" class="navigation-item card">
+            <div class="navigation-item-num">
+              <span class="number">2</span>
+            </div>
+            <div class="navigation-item-info info">
+              <h3 class="orange-hover">Преждевременная оптимизация</h3>
+              <p class="info-text">
+                Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
+              </p>
+            </div>
+          </a>
 
-					<a href="#" class="navigation__item navigation-item card">
-						<div class="navigation-item__num">
-							<span class="number">3</span>
-						</div>
-						<div class="navigation-item__info info">
-							<h3 class="orange-hover">Искажение новизны</h3>
-							<p class="info-text">
-								Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
-							</p>
-						</div>
-					</a>
+          <a href="#" class="navigation-item card">
+            <div class="navigation-item-num">
+              <span class="number">3</span>
+            </div>
+            <div class="navigation-item-info info">
+              <h3 class="orange-hover">Искажение новизны</h3>
+              <p class="info-text">
+                Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
+              </p>
+            </div>
+          </a>
 
-					<a href="#" class="navigation__item navigation-item card">
-						<div class="navigation-item__num">
-							<span class="number">4</span>
-						</div>
-						<div class="navigation-item__info info">
-							<h3 class="orange-hover">Гиперболическое обесценивание</h3>
-							<p class="info-text">
-								Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.
-							</p>
-						</div>
-					</a>
+          <a href="#" class="navigation-item card">
+            <div class="navigation-item-num">
+              <span class="number">4</span>
+            </div>
+            <div class="navigation-item-info info">
+              <h3 class="orange-hover">Гиперболическое обесценивание</h3>
+              <p class="info-text">
+                Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.
+              </p>
+            </div>
+          </a>
 
-					<a href="#" class="navigation__item navigation-item card">
-						<div class="navigation-item__num">
-							<span class="number">5</span>
-						</div>
-						<div class="navigation-item__info info">
-							<h3 class="orange-hover">Ошибка планирования</h3>
-							<p class="info-text">
-								Неправильно рассчитывать время необходимое для завершения задачи.
-							</p>
-						</div>
-					</a>
+          <a href="#" class="navigation-item card">
+            <div class="navigation-item-num">
+              <span class="number">5</span>
+            </div>
+            <div class="navigation-item-info info">
+              <h3 class="orange-hover">Ошибка планирования</h3>
+              <p class="info-text">
+                Неправильно рассчитывать время необходимое для завершения задачи.
+              </p>
+            </div>
+          </a>
 
-				</div>
-			</div>
-		</section>
+        </div>
+      </div>
+    </section>
 
-	</main>
+    <section class="effect color-light">
+      <div if="ikea-effect" class="block section">
+        <div class="head">
+          <img src="./images/1.png" alt="image" class="head-image">
+          <div class="block-info">
+            <span class="dark-opacity-text">Когнитивные искажения</span>
+            <h2 class="size-h1">Эффект ИКЕА</h2>
+            <p class="block-text">
+              Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-	<footer class="footer">
+  </main>
 
-	</footer>
+  <footer class="footer">
+
+  </footer>
 </body>
 </html>
