--- a/src/index.html
+++ b/src/index.html
@@ -46,14 +46,14 @@
     </section>
 
     <section class="nav">
-      <div id="navigation" class="section">
+      <div name="navigation" class="section">
         <div class="navigation-block-link">
 
           <div class="navigation-title navigation-item">
             <p><span class="orange-hover">5 когнитивных искажений</span><br>о существовании которых стоит помнить</p>
           </div>
 
-          <a href="#" class="navigation-item card">
+          <a href="#ikea-effect" class="navigation-item card">
             <div class="navigation-item-num">
               <span class="number">1</span>
             </div>
@@ -118,7 +118,8 @@
     </section>
 
     <section class="effect color-light">
-      <div if="ikea-effect" class="block section">
+      <div class="block section" id="ikea-effect">
+        
         <div class="head">
           <img src="./images/1.png" alt="image" class="head-image">
           <div class="block-info">
@@ -129,6 +130,22 @@
             </p>
           </div>
         </div>
+
+        <h3 class="size-small">Как проявляется</h3>
+
+        <div class="tail">
+          <div class="tail-right">
+            <p class="tail-text">
+              Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.
+            </p>
+          </div>
+          <div class="tail-left">
+            <div class="tail-text">
+              Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.
+            </div>
+          </div>
+        </div>
+        
       </div>
     </section>
 
