--- a/src/index.html
+++ b/src/index.html
@@ -303,7 +303,7 @@
           </form>
       </div>
       <div class="footer-bottom">
-          <div class="footer-copyrights">&copy; 2022 Yaroslav Skiba</div>
+          <div class="footer-copyrights">&copy; 2022 Ярослав Скиба</div>
           <div class="footer-copyrights">По материалам статьи <a class="footer-link link" href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" title="Yash Ranadive">Yash Ranadive Cognitive Biases in Programming</a></div>
           <div class="footer-copyrights"><a class="footer-link link" href="https://ru.hexlet.io/" title="Курсы Hexlet">Курсы программирования Hexlet</a></div>
       </div>
