--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <section class="nav background-dark">
-      <div name="navigation" class="section">
+      <div id="navigation" class="section">
         <div class="navigation-block-link">
 
           <div class="navigation-title navigation-item">
